<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_demo_py</name>
  <version>0.1.0</version>
  <description>Python demo nodes for interfacing with PX4</description>

  <maintainer email="beniamino.pozzan@gmail.com">Beniamino Pozzan</maintainer>
  <author email="beniamino.pozzan@gmail.com">Beniamino Pozzan</author>
  <author email="nuno.marques@dronesolutions.io">Nuno Marques</author>

  <license>BSD 3-Clause</license>

  <exec_depend>rclpy</exec_depend>

  <exec_depend>px4_msgs</exec_depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
